# SAMO

./: .gitignore  CITATION.cff  LICENSE  PUBLIC_RELEASE_MANIFEST.tsv  README.md  RELEASE_BUILD_REPORT.md  pyproject.toml
configs/: copco_paths.example.yaml  eyebench_style_nonofficial.yaml  lm_scoring.example.yaml  samo_ablation.yaml  samo_lopo.yaml
docs/: data_access.md  eyebench_claims.md  limitations_ethics.md  method.md  provenance.md  reproducibility.md  results.md
examples/synthetic_minimal/: README.md  run.sh
scripts/: build_reader_profiles.py  check_public_release.py  make_tables_figures.py  prepare_copco_features.py  run_ablations.py  run_eyebench_style_nonofficial.py  run_lopo.py  score_predictability.py
src/samo_copco/: __init__.py  ablations.py  cli.py  data.py  data_contracts.py  evaluation.py  eyebench_style.py  features.py  lm_scoring.py  metrics.py  models.py  predictability.py  profiles.py  residualization.py  stimulus_reconstruction.py  token_alignment.py  validation.py
tests/: test_cli_smoke.py  test_copco_camelcase_lm_scoring.py  test_data_contracts.py  test_dfm_profile_features.py  test_features.py  test_lm_ablation_groups.py  test_lm_scoring_math.py  test_lopo_splits.py  test_public_release_sanitization.py  test_reader_profiles.py  test_repeated_participant_word_merge.py  test_residualization_no_leakage.py  test_score_predictability_cli_mock.py  test_stimulus_reconstruction.py  test_token_alignment.py
tests/fixtures/: copco_camelcase_lm_words.csv  repeated_participant_word_rows.csv  synthetic_labels.csv  synthetic_lm_words.csv  (+1 more)
