[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "samo-copco"
version = "1.0.0"
description = "SAMO reader-profile modeling for CopCo reader-level classification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SAMO contributors" },
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
]
lm = [
  "accelerate>=0.27",
  "pyarrow>=15",
  "torch>=2.1",
  "transformers>=4.40",
]

[project.scripts]
samo-copco = "samo_copco.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/samo_copco"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/scripts",
  "/configs",
  "/tests",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/CITATION.cff",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
